Fixed spacing issue and a spelling error

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,7 @@ main {
 }
 
 .top {
-  padding-top: 220px;
+  padding-top: 120px;
 }
 
 .social {
@@ -311,7 +311,7 @@ a li:hover::before {
 #hero h1 {
   text-align: center;
   font-size: 2em;
-  padding-top: 220px;
+  padding-top: 120px;
   background-color: white;
   /* Centers text */
 }
@@ -415,7 +415,7 @@ a li:hover::before {
 /* ==============================
 Medium devices (640px and larger)
 ================================= */
-@media only screen and (min-width: 641px) {
+@media only screen and (min-width: 640px) {
   header {
     text-align: unset;
     padding: 0px;
@@ -509,6 +509,10 @@ Medium devices (640px and larger)
     margin-right: auto;
     padding-left: 20px;
   }
+}
+
+.top {
+  padding-top: 140px;
 }
 
 
